--- a/src/app/mapas/pages/propiedades/propiedades.component.html
+++ b/src/app/mapas/pages/propiedades/propiedades.component.html
@@ -1,31 +1,28 @@
+<div class="container">
+  <div class="row mt-3">
+      <div class="col text-end">
+          <h1>Propiedades</h1>
+          <hr>
+      </div>
+  </div>
 
-<div class="row mt-3">
-    <div class="col-2">
+  <div class="row">
+      <div class="col">
+          <div class="row">
 
-    </div>
-    <div class="col">
-        <h1>Lista de propeidades</h1>
-        <hr>
-    </div>
-</div>
+              <div class="col-12 col-md-4 mb-2"
+                  *ngFor="let propiedad of propiedades">
 
-<div class="row container">
-    <div class="col-2"></div>
-    <div class="col">
-        <div class="row">
+                  <div class="card">
+                      <app-mini-mapa [lngLat]="propiedad.lngLat" class="card-img-top"></app-mini-mapa>
+                      <div class="card-body">
+                          <h5 class="card-title">{{propiedad.titulo}}</h5>
+                          <p class="card-text">{{propiedad.descripcion}}</p>
+                      </div>
+                  </div>
+              </div>
 
-            <div class="col-4 mb-2"
-                *ngFor="let propiedad of propiedades">
-
-                <div class="card">
-                    <app-mini-mapa [lngLat]="propiedad.lngLat" class="card-img-top"></app-mini-mapa>
-                    <div class="card-body">
-                        <h5 class="card-title">{{propiedad.titulo}}</h5>
-                        <p class="card-text">{{propiedad.descripcion}}</p>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
+          </div>
+      </div>
+  </div>
 </div>
